syntax = "proto3";

package protocol;

//Package 数据包定义
message Package {
    int32 serial    = 1; //协议号
    bytes buff      = 2; //子协议包
}

//客户端发给服务器的协议定义
enum C2SCmd {
  None  = 0;    // 断开
  Chat  = 1;    // 发送消息
}

message C2SChat {
  uint64 index      = 1;
  string context    = 2;
}

//服务器发给客户端的协议定义
enum S2CCmd {
    Result =   0;
}

message S2CResult {
    string context  = 1;
}
